# offspot-config

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: Publish.yaml  Tests.yaml  qa.yml  release.yml  test.yml
src/offspot_config/: builder.py  catalog.json  catalog.py  constants.py  file.py  inputs.py  oci_images.py  packages.py  zim.py
src/offspot_config/inputs/: base.py  checksum.py  file.py  mainconfig.py  oci.py  output.py  str.py  ways.py
src/offspot_config/utils/: dashboard.py  download.py  misc.py  sizes.py  yaml.py
src/offspot_runtime/: __about__.py  ap.py  checks.py  configlib.py  containers.py  dnsmasqspoof.py  ethernet.py  firmware.py  fromfile.py  hostname.py  timezone.py
src/offspot_runtime_config/: ap.py  containers.py  dnsmasqspoof.py  ethernet.py  fromfile.py  hostname.py  offspot_config_lib.py  timezone.py
tests/: conftest.py  test_catalog.py  test_checks.py  test_humanid.py  test_inputs.py  test_link.py  test_reader.py  test_zim.py
