[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "offspot-config"
authors = [
  { name = "Kiwix", email = "dev@kiwix.org" },
]
keywords = ["offspot"]
# target is (was) Debian Bullseye which offers python 3.9.2
requires-python = ">=3.9"
description = "Offspot Config helpers"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
]
dependencies = [
    "PyYAML==6.0.1",
    "docker-export[visual]>=1.0.0,<2.0",
    "humanfriendly>=10.0",
    "requests>=2.31.0,<3",
    "typeguard>=4.1.5",
    "iso3166==2.1.1",
    "xmltodict>=0.13.0,<0.14",
    "attrs>=23.1.0,<23.2",
    "urllib3>=2.0.0,<3.0",
    "pathvalidate>=3.0.0,<4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
scripts = [
  "invoke==2.2.0",
]
lint = [
  "black==24.4.2",
  "ruff==0.4.4",
]
check = [
  "pyright==1.1.363",
]
test = [
  "pytest==8.2.1",
  "coverage==7.5.1",
]
dev = [
  "pre-commit==3.7.1",
  "ipython==8.24.0",
  "offspot-config[scripts]",
  "offspot-config[lint]",
  "offspot-config[test]",
  "offspot-config[check]",
]

[project.urls]
"Homepage" = "https://github.com/offspot/offspot-config"
"Donate" = "https://www.kiwix.org/en/support-us/"

[project.scripts]
offspot-runtime-config-ap = "offspot_runtime.ap:entrypoint"
offspot-runtime-config-containers = "offspot_runtime.containers:entrypoint"
offspot-runtime-config-ethernet = "offspot_runtime.ethernet:entrypoint"
offspot-runtime-config-hostname = "offspot_runtime.hostname:entrypoint"
offspot-runtime-config-timezone = "offspot_runtime.timezone:entrypoint"
offspot-runtime-config-fromfile = "offspot_runtime.fromfile:entrypoint"
toggle-dnsmasq-spoof = "offspot_runtime.dnsmasqspoof:entrypoint"
offspot-runtime-config-firmware = "offspot_runtime.firmware:entrypoint"

[tool.hatch.version]
path = "src/offspot_runtime/__about__.py"

[tool.hatch.build]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/offspot_runtime", "src/offspot_config"]

[tool.hatch.envs.default]
features = ["dev"]

[[tool.hatch.envs.default.matrix]]
python = ["3.11"]

[tool.hatch.envs.test]
features = ["scripts", "test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
run = "inv test --args '{args}'"
run-cov = "inv test-cov --args '{args}'"
report-cov = "inv report-cov"
coverage = "inv coverage --args '{args}'"

[tool.hatch.envs.lint]
template = "lint"
skip-install = false
features = ["scripts", "lint"]

[tool.hatch.envs.lint.scripts]
black = "inv lint-black --args '{args}'"
ruff = "inv lint-ruff --args '{args}'"
all = "inv lintall --args '{args}'"
fix-black = "inv fix-black --args '{args}'"
fix-ruff = "inv fix-ruff --args '{args}'"
fixall = "inv fixall --args '{args}'"

[tool.hatch.envs.check]
features = ["scripts", "check"]

[tool.hatch.envs.check.scripts]
pyright = "inv check-pyright --args '{args}'"
all = "inv checkall --args '{args}'"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src"]

[lint]
select = [
  "A",  # flake8-builtins
  # "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  # "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  # "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  # "COM",  # flake8-commas
  # "D",  # pydocstyle
  # "DJ",  # flake8-django
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (default)
  "EM",  # flake8-errmsg
  # "ERA",  # eradicate
  # "EXE",  # flake8-executable
  "F",  # Pyflakes (default)
  # "FA",  # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  # "FLY",  # flynt
  # "G",  # flake8-logging-format
  "I",  # isort
  "ICN",  # flake8-import-conventions
  # "INP",  # flake8-no-pep420
  # "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "N",  # pep8-naming
  # "NPY",  # NumPy-specific rules
  # "PD",  # pandas-vet
  # "PGH",  # pygrep-hooks
  # "PIE",  # flake8-pie
  # "PL",  # Pylint
  "PLC",  # Pylint: Convention
  "PLE",  # Pylint: Error
  "PLR",  # Pylint: Refactor
  "PLW",  # Pylint: Warning
  # "PT",  # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  # "PYI",  # flake8-pyi
  "Q",  # flake8-quotes
  # "RET",  # flake8-return
  # "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  # "SIM",  # flake8-simplify
  # "SLF",  # flake8-self
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  # "TCH",  # flake8-type-checking
  # "TD",  # flake8-todos
  "TID",  # flake8-tidy-imports
  # "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Remove flake8-errmsg since we consider they bloat the code and provide limited value
  "EM",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore warnings on subprocess.run / popen
  "S603",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore magic-value-comparison
  "PLR2004"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[lint.isort]
known-first-party = ["offspot_config", "offspot_runtime"]
known-local-folder = ["src"]

[lint.flake8-bugbear]
# add exceptions to B008 for fastapi.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[lint.flake8-tidy-imports]
ban-relative-imports = "all"

[lint.per-file-ignores]
"tests/**/*" = [
  # can use magic values, assertions and relative imports
  "PLR2004", "S101", "TID252",
  # can bind to all ifaces
  "S104",
  # can use Boolean positional arg in function definition
  "FBT001",
]

[tool.pytest.ini_options]
minversion = "7.3"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.coverage.paths]
offspot_config = ["src/offspot_config", "src/offspot_runtime"]
tests = ["tests"]

[tool.coverage.run]
source_pkgs = ["offspot_runtime", "offspot_config"]
branch = true
parallel = true
omit = [
  "src/offspot_runtime/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["src", "tests", "tasks.py"]
exclude = [".env/**", ".venv/**"]
extraPaths = ["src"]
pythonVersion = "3.9"
typeCheckingMode="basic"
reportImplicitStringConcatenation=false
